--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,233 @@
-Django==5.2.8
-djangorestframework==3.16.1
-djangorestframework-simplejwt==5.5.1
-django-cors-headers==4.9.0
-gunicorn==23.0.0
+aiodns==3.0.0
+aiohttp==3.9.5
+aiosignal==1.3.2
+anyio==3.7.1
+appdirs==1.4.4
+argcomplete==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.11.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+babel==2.17.0
+Beaker==1.12.1
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blivet==3.10.0
+blivet-gui==2.6.0
+blosc2==2.5.1
+boto3==1.37.38
+botocore==1.37.38
+Bottleneck==1.3.7
+Brlapi==0.8.5
+Brotli==1.1.0
+cachetools==5.3.2
+certifi==2023.5.7
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.1
+contourpy==1.2.0
+cryptography==41.0.7
+cssselect==1.1.0
+cupshelpers==1.0
+cycler==0.11.0
+dasbus==1.7
+dbus-python==1.3.2
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
 dj-database-url==3.0.1
+Django==5.2.8
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+dnf==4.23.0
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==2.2.0
+fastjsonschema==2.18.0
+fedora-third-party==0.10
+file-magic==0.4.0
+fonttools==4.50.0
+fqdn==1.5.1
+fros==1.1
+frozenlist==1.4.1
+fs==2.4.16
+fsspec==2025.3.2
+gcsfs==2023.6.0+1.g7cc53d9
+google-api-core==2.11.1
+google-auth==2.38.0
+google-auth-oauthlib==0.8.0
+google-cloud-core==2.3.3
+google-cloud-storage==2.14.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.48.4
+grpcio-status==1.48.4
+gunicorn==23.0.0
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.2
+httpx==0.26.0
+humanize==3.13.1
+idna==3.7
+inkex==1.4.0
+ipykernel==6.29.3
+ipython==8.23.0
+iso639==0.1.4
+isoduration==20.11.0
+jdcal==1.4.1
+jedi==0.19.1
+Jinja2==3.1.6
+jmespath==1.0.1
+json5==0.9.24
+jsonpointer==2.3
+jsonschema==4.19.1
+jsonschema-specifications==2023.11.2
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==7.4.9
+jupyter_core==5.1.0
+jupyter_server==2.12.5
+jupyter_server_terminals==0.4.2
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kiwisolver==1.4.8
+langtable==0.0.68
+libcomps==0.1.20
+libdnf==0.74.0
+louis==3.28.0
+lxml==5.1.0
+Mako==1.2.3
+MarkupSafe==2.1.3
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+mistune==2.0.4
+msgpack==1.0.6
+multidict==6.0.5
+nbclient==0.9.0
+nbconvert==7.16.0
+nbformat==5.9.2
+ndindex==1.7
+nest-asyncio==1.6.0
+netifaces==0.11.0
+nftables==0.1
+notebook_shim==0.2.3
+numexpr==2.8.5
+numpy==1.26.4
+oauthlib==3.2.2
+odfpy==1.4.1
+olefile==0.47
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.2.1
+pandocfilters==1.5.1
+parso==0.8.3
+Paste==3.7.1
+pexpect==4.9.0
+pid==2.2.3
+pillow==10.3.0
+platformdirs==3.11.0
+ply==3.11
+pooch==1.8.2
+productmd==1.45
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
+protobuf==3.19.6
+psutil==5.9.8
+psycopg2==2.9.9
 psycopg2-binary==2.9.11
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pwquality==1.4.5
+py-cpuinfo==9.0.0
+pyarrow==15.0.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycairo==1.25.1
+pycares==4.3.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==2.0.4
+pydub==0.25.1
+pyenchant==3.2.2
+Pygments==2.17.2
+PyGObject==3.48.2
+PyJWT==2.10.1
+pykickstart==3.52
+PyMySQL==1.1.1
+pyOpenSSL==23.2.0
+pyparsing==3.1.2
+pyparted==3.13.0
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+pyserial==3.5
+PySocks==1.7.1
+python-augeas==1.1.0
+python-dateutil==2.8.2
+python-json-logger==2.0.4
+python-meh==0.51
+python-pam==2.0.2
+pytz==2025.2
+pyudev==0.24.1
+pyxdg==0.27
+PyYAML==6.0.1
+pyzmq==25.1.2
+QtPy==2.4.1
+rapidfuzz==3.5.2
+referencing==0.31.1
+regex==2024.11.6
+requests==2.31.0
+requests-file==2.0.0
+requests-ftp==0.3.1
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.1
+rpm==4.19.1.1
+rsa==4.9
+s3transfer==0.11.5
+SciPy==1.11.3
+scour==0.38.2
+selinux @ file:///builddir/build/BUILD/libselinux-3.7/src
+Send2Trash==1.8.2
+sepolicy @ file:///builddir/build/BUILD/selinux-3.7/python/sepolicy
+setools==4.5.1
+setuptools==69.0.3
+simpleaudio==1.0.4
+simpleline==1.9.0
+six==1.16.0
+sniffio==1.3.0
+sos==4.7.2
+soupsieve==2.5
+SQLAlchemy==2.0.40
+sqlparse==0.5.3
+stack-data==0.6.3
+systemd-python==235
+tables==3.9.2
+tabulate==0.9.0
+Tempita==0.5.2
+terminado==0.18.0
+tinycss2==1.2.1
+tornado==6.3.3
+traitlets==5.14.1
+typing_extensions==4.12.2
+uri-template==1.2.0
+urllib3==1.26.20
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.3.3
 whitenoise==6.11.0
+xarray==2023.8.0
+xkbregistry==0.3
+xlrd==2.0.1
+XlsxWriter==3.2.3
+yarl==1.9.4
+zstandard==0.22.0
