--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["python", "app.py"]
+CMD ["python", "backend/manage.py", "runserver", "0.0.0.0:10000"]
+
