--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && \
     apt-get install -y ffmpeg build-essential && \
     rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+WORKDIR /backend
 
 COPY . .
 
@@ -14,5 +14,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["python", "backend/manage.py", "runserver", "0.0.0.0:10000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:10000"]
 
