--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,13 +6,13 @@ RUN apt-get update && \
     apt-get install -y ffmpeg build-essential && \
     rm -rf /var/lib/apt/lists/*
 
-WORKDIR /backend
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-RUN pip install --no-cache-dir -r requirements.txt
+ENV PYTHONUNBUFFERED=1
 
-EXPOSE 8000
-
-CMD ["python", "manage.py", "runserver", "0.0.0.0:10000"]
-
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0.0.0.0:10000"]
